--- a/src/index.css
+++ b/src/index.css
@@ -264,6 +264,17 @@ body {
   width: 100%;
 }
 
+@media not all and (min-width: 640px) {
+  .ant-steps-item-title {
+    font-size: 12px !important;
+    padding-inline-end: 8px !important;
+  }
+
+  .ant-steps-item {
+    padding-inline-start: 6px;
+  }
+}
+
 .ant-steps-icon,
 .ant-steps-item-title {
   color: color-mix(in oklab, var(--user-theme), black 25%) !important;
